platform-ingress/overlays/stg/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
spec:
  rules:
    - host: api.stg.example.com
      http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /product-service
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
